data/forge_javadoc/1.7.10/raw/net/minecraft/entity/passive/EntityCow.md
---
title: "EntityCow"
description: "public class EntityCow extends EntityAnimal"
package: "net/minecraft/entity/passive"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/entity/passive/EntityCow.html"
sourceType: javadoc
---

# EntityCow

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.EntityAgeable → net.minecraft.entity.passive.EntityAnimal → net.minecraft.entity.passive.EntityCow

## Class signature

```java
public class EntityCow extends EntityAnimal
```

## Methods

- `protected void applyEntityAttributes()`
- `EntityCow createChild(EntityAgeable p_90011_1_)`
- `protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)`
- `protected void func_145780_a(int p_145780_1_, int p_145780_2_, int p_145780_3_, Block p_145780_4_)`
- `protected java.lang.String getDeathSound()`
- `protected Item getDropItem()`
- `protected java.lang.String getHurtSound()`
- `protected java.lang.String getLivingSound()`
- `protected float getSoundVolume()`
- `boolean interact(EntityPlayer p_70085_1_)`
- `boolean isAIEnabled()`

## Fields

- `EntityCow`
